--- a/initial_code.ipynb
+++ b/initial_code.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 2,
    "id": "d5ddd921",
    "metadata": {},
    "outputs": [
@@ -27,11 +27,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.6285, 0.0315, 0.8065],\n",
-      "        [0.5541, 0.3954, 0.9505],\n",
-      "        [0.5950, 0.9293, 0.1079],\n",
-      "        [0.9751, 0.6428, 0.2655],\n",
-      "        [0.1106, 0.6482, 0.3987]])\n"
+      "tensor([[0.4895, 0.3500, 0.7901],\n",
+      "        [0.3903, 0.6866, 0.5951],\n",
+      "        [0.2279, 0.4122, 0.9905],\n",
+      "        [0.0026, 0.4722, 0.7661],\n",
+      "        [0.6012, 0.6025, 0.7764]])\n"
      ]
     }
    ],
@@ -55,12 +55,15 @@
     "\n",
     "x = torch.rand(5, 3)\n",
     "print(x)\n",
-    "\n"
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import numpy as np\n",
+    "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "id": "0e01241f",
    "metadata": {},
    "outputs": [
@@ -68,120 +71,106 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['./EuroSAT_RGB/Forest', './EuroSAT_RGB/Highway', './EuroSAT_RGB/Residential', './EuroSAT_RGB/Industrial', './EuroSAT_RGB/PermanentCrop', './EuroSAT_RGB/SeaLake', './EuroSAT_RGB/Pasture', './EuroSAT_RGB/AnnualCrop', './EuroSAT_RGB/HerbaceousVegetation', './EuroSAT_RGB/River']\n",
-      "27000\n",
-      "\n",
-      "labels: Forest Industrial\n",
-      "label index: 0 9000\n",
-      "label tensor: [[0. 1. 0. 0. 0. 0. 0. 0. 0. 0.]] [[0. 0. 0. 0. 1. 0. 0. 0. 0. 0.]]\n",
-      "X: ./EuroSAT_RGB/AnnualCrop/AnnualCrop_845.jpg\n",
-      "21600\n",
-      "5400\n",
-      "y: 19119\n",
-      "21600\n",
-      "5400\n"
+      "Loading data from: c:\\Users\\cokie\\Workspace\\GithubProjects\\UrbanSatelliteAnalysis\\EuroSAT_RGB\n",
+      "First 5 rgb image file paths:  [WindowsPath('c:/Users/cokie/Workspace/GithubProjects/UrbanSatelliteAnalysis/EuroSAT_RGB/EuroSAT_RGB/AnnualCrop/AnnualCrop_1.jpg'), WindowsPath('c:/Users/cokie/Workspace/GithubProjects/UrbanSatelliteAnalysis/EuroSAT_RGB/EuroSAT_RGB/AnnualCrop/AnnualCrop_10.jpg'), WindowsPath('c:/Users/cokie/Workspace/GithubProjects/UrbanSatelliteAnalysis/EuroSAT_RGB/EuroSAT_RGB/AnnualCrop/AnnualCrop_100.jpg'), WindowsPath('c:/Users/cokie/Workspace/GithubProjects/UrbanSatelliteAnalysis/EuroSAT_RGB/EuroSAT_RGB/AnnualCrop/AnnualCrop_1000.jpg'), WindowsPath('c:/Users/cokie/Workspace/GithubProjects/UrbanSatelliteAnalysis/EuroSAT_RGB/EuroSAT_RGB/AnnualCrop/AnnualCrop_1001.jpg')]\n",
+      "First 5 labels:  ['AnnualCrop', 'AnnualCrop', 'AnnualCrop', 'AnnualCrop', 'AnnualCrop']\n"
      ]
     }
    ],
    "source": [
-    "# import zipfile\n",
-    " \n",
-    "# Define the path to your zip file\n",
-    "# zip_file_path = 'EuroSAT_RGB.zip'\n",
-    " \n",
-    " \n",
-    "# extract_to_directory = 'extracted_files'\n",
-    " \n",
-    "# try:\n",
-    "#     with zipfile.ZipFile(zip_file_path, 'r') as zip_ref:\n",
-    "#         zip_ref.extractall(extract_to_directory)\n",
-    "#     print(f\"Successfully extracted all contents of '{zip_file_path}' to '{extract_to_directory}'\")\n",
-    "# except zipfile.BadZipFile:\n",
-    "#     print(f\"Error: '{zip_file_path}' is not a valid zip file.\")\n",
-    "# except FileNotFoundError:\n",
-    "#     print(f\"Error: Zip file '{zip_file_path}' not found.\")\n",
-    "# except Exception as e:\n",
-    "#     print(f\"An unexpected error occurred: {e}\")\n",
-    " \n",
-    "from sklearn.model_selection import train_test_split\n",
-    " \n",
+    "## Read in files and labels from datasets\n",
+    "\n",
+    "# build the path for rgb image files\n",
+    "project_root = Path.cwd()\n",
+    "# pathlib automatically uses the correct separator for the OS.\n",
+    "image_dir_path = project_root / 'EuroSAT_RGB'\n",
+    "print(f\"Loading data from: {image_dir_path}\")\n",
+    "\n",
+    "# Check if path is valid directory\n",
+    "if not image_dir_path.is_dir():\n",
+    "    print(f\"Error: Directory not found at {image_dir_path}\")\n",
+    "else:\n",
+    "    image_extensions = ['.jpg', '.jpeg', '.png', '.gif']\n",
+    "\n",
     "# Gather all image file paths\n",
-    "image_dir = './EuroSAT_RGB/'\n",
-    "all_paths = [os.path.join(image_dir, f) for f in os.listdir(image_dir)]\n",
-    "all_paths = all_paths[1:]\n",
-    "print(all_paths)\n",
+    "all_image_paths = [file for file in image_dir_path.rglob('*') \n",
+    "                 if file.suffix.lower() in image_extensions]\n",
+    "# gather labels for each image (label of image determined by directory housing image)\n",
+    "all_labels = [path.parent.name for path in all_image_paths]\n",
+    "print(\"First 5 rgb image file paths: \", all_image_paths[:5])\n",
+    "print(\"First 5 labels: \", all_labels[:5])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f6b0d00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "labels: AnnualCrop Highway\n",
+      "label index: 0 9000\n",
+      "label tensor: [[1. 0. 0. 0. 0. 0. 0. 0. 0. 0.]] [[0. 0. 0. 1. 0. 0. 0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Get a list of unique data labels, and get a list of labels for all data in one-hot-encoding format\n",
     "\n",
-    "all_files = []\n",
-    "labels = []\n",
-    "\n",
-    "for path in all_paths:\n",
-    "  all_files.extend([os.path.join(path, f) for f in os.listdir(path)])\n",
-    "  index = path.find('EuroSAT_RGB/')\n",
-    "  if index != -1:\n",
-    "      start_index = index + len('EuroSAT_RGB/')\n",
-    "      result = path[start_index:]\n",
-    "  else:\n",
-    "      result = \"\" # Target string not found\n",
-    "  labels.extend([result] * len(os.listdir(path)))\n",
-    " \n",
-    "\n",
-    "# Get labels (assuming class names are part of the file paths)\n",
-    "labels_names = [os.path.basename(os.path.dirname(f)) for f in all_files]\n",
-    "print(len(labels)) \n",
-    "import numpy as np\n",
-    "\n",
-    "labels_unique = np.unique(labels_names)\n",
-    "\n",
-    "# print(labels_unique)\n",
-    "# label_enum = [x for x in range(len(labels_unique))]\n",
-    "print()\n",
+    "labels_unique = np.unique(all_labels)\n",
     "\n",
     "label_tensor = []\n",
     "label_index = []\n",
-    "for i in range(len(labels)):\n",
+    "for i in range(len(all_labels)):\n",
     "   vect_init = np.zeros((1,len(labels_unique)))\n",
-    "   vect_init[0][np.where(labels_unique == labels[i])[0]] = 1\n",
-    "#    labels\n",
-    "#    print(np.where(labels_unique == labels[i])[0])\n",
+    "   vect_init[0][np.where(labels_unique == all_labels[i])[0]] = 1\n",
     "   label_tensor.append(vect_init)\n",
     "   label_index.append(i)\n",
     "   \n",
-    "print(\"labels:\",labels[0],labels[9000])\n",
-    "print(\"label index:\",label_index[0],label_index[9000])\n",
-    "print(\"label tensor:\",label_tensor[0],label_tensor[9000])\n",
-    "# labels = [label_enum[labels_unique.index(str_label)] for str_label in labels_unique]\n",
-    "\n",
-    "\n",
-    "# Split the file paths, using stratify to maintain class distribution\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    all_files, label_index, test_size=0.2, random_state=42, stratify=labels\n",
-    ") \n",
-    "print(\"X:\",X_train[0]) \n",
-    "print(len(X_train)) \n",
-    "print(len(X_test)) \n",
-    "print(\"y:\",y_train[0]) \n",
-    "print(len(y_train)) \n",
-    "print(len(y_test)) \n"
+    "print(\"labels:\", all_labels[0], all_labels[9000])\n",
+    "print(\"label index:\", label_index[0],label_index[9000])\n",
+    "print(\"label tensor:\", label_tensor[0],label_tensor[9000])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "bf298a0e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First training input: c:\\Users\\cokie\\Workspace\\GithubProjects\\UrbanSatelliteAnalysis\\EuroSAT_RGB\\EuroSAT_RGB\\AnnualCrop\\AnnualCrop_1556.jpg\n",
+      "First training label (index of label in all_labels): 619\n",
+      "Number of training inputs 21600\n",
+      "Number of training labels: 21600\n",
+      "Number of testing inputs 5400\n",
+      "Number of testing labels 5400\n"
+     ]
+    }
+   ],
    "source": [
-    "# from PIL import Image\n",
-    "# from torchvision.transforms import ToTensor\n",
+    "# Split the file paths, using stratify to maintain class distribution\n",
     "\n",
-    "# image = Image.open('EuroSAT_RGB/AnnualCrop/AnnualCrop_1.jpg')\n",
-    "# image = ToTensor()(image)\n",
-    "# print(image.shape)"
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    all_image_paths, label_index, test_size=0.2, random_state=42, stratify=all_labels\n",
+    ") \n",
+    "print(\"First training input:\", X_train[0])  \n",
+    "print(\"First training label (index of label in all_labels):\", y_train[0])\n",
+    "print(\"Number of training inputs\", len(X_train))\n",
+    "print(\"Number of training labels:\", len(y_train))\n",
+    "print(\"Number of testing inputs\", len(X_test))\n",
+    "print(\"Number of testing labels\", len(y_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 13,
    "id": "a721ae42",
    "metadata": {},
    "outputs": [],
@@ -233,25 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "id": "17377535",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# batch_size = 60\n",
-    "\n",
-    "# train_dataset = datasets.MNIST(root=\"EuroSAT_RGB/\", download=True, train=True, transform=transforms.ToTensor())\n",
-    "\n",
-    "# train_loader = DataLoader(dataset=train_dataset, batch_size=batch_size, shuffle=True)\n",
-    "\n",
-    "# test_dataset = datasets.MNIST(root=\"EuroSAT_RGB/\", download=True, train=False, transform=transforms.ToTensor())\n",
-    "\n",
-    "# test_loader = DataLoader(dataset=test_dataset, batch_size=batch_size, shuffle=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 14,
    "id": "a672cf2b",
    "metadata": {},
    "outputs": [
@@ -283,12 +254,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "id": "50f1ae13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Define the loss function\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "\n",
@@ -4514,7 +4484,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py-dev-env",
+   "display_name": "DataScienceProject",
    "language": "python",
    "name": "python3"
   },
@@ -4528,7 +4498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
