adding plotting for the training accuracies of the 40 epoch rgb training vs ms training

--- a/initial_code.ipynb
+++ b/initial_code.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d5ddd921",
    "metadata": {},
    "outputs": [
@@ -27,11 +27,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.4895, 0.3500, 0.7901],\n",
-      "        [0.3903, 0.6866, 0.5951],\n",
-      "        [0.2279, 0.4122, 0.9905],\n",
-      "        [0.0026, 0.4722, 0.7661],\n",
-      "        [0.6012, 0.6025, 0.7764]])\n"
+      "tensor([[0.6863, 0.8538, 0.7062],\n",
+      "        [0.9087, 0.6379, 0.4148],\n",
+      "        [0.3764, 0.0230, 0.6513],\n",
+      "        [0.3884, 0.9568, 0.7225],\n",
+      "        [0.0031, 0.5742, 0.3412]])\n"
      ]
     }
    ],
@@ -98,12 +98,12 @@
     "# gather labels for each image (label of image determined by directory housing image)\n",
     "all_labels = [path.parent.name for path in all_image_paths]\n",
     "print(\"First 5 rgb image file paths: \", all_image_paths[:5])\n",
-    "print(\"First 5 labels: \", all_labels[:5])\n"
+    "print(\"First 5 labels: \", all_labels[:5])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8f6b0d00",
    "metadata": {},
    "outputs": [
@@ -111,6 +111,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "all labels:  ['AnnualCrop' 'Forest' 'HerbaceousVegetation' 'Highway' 'Industrial'\n",
+      " 'Pasture' 'PermanentCrop' 'Residential' 'River' 'SeaLake']\n",
       "labels: AnnualCrop Highway\n",
       "label index: 0 9000\n",
       "label tensor: [[1. 0. 0. 0. 0. 0. 0. 0. 0. 0.]] [[0. 0. 0. 1. 0. 0. 0. 0. 0. 0.]]\n"
@@ -129,7 +131,8 @@
     "   vect_init[0][np.where(labels_unique == all_labels[i])[0]] = 1\n",
     "   label_tensor.append(vect_init)\n",
     "   label_index.append(i)\n",
-    "   \n",
+    "\n",
+    "print(\"all labels: \", labels_unique)\n",
     "print(\"labels:\", all_labels[0], all_labels[9000])\n",
     "print(\"label index:\", label_index[0],label_index[9000])\n",
     "print(\"label tensor:\", label_tensor[0],label_tensor[9000])"
